my_component task1 done

--- a/attach_shelf/CMakeLists.txt
+++ b/attach_shelf/CMakeLists.txt
@@ -35,12 +35,12 @@ endif()
 
 add_executable(pre_approach_node src/pre_approach.cpp)
 ament_target_dependencies(pre_approach_node 
-rclcpp sensor_msgs geometry_msgs nav_msgs)
+rclcpp sensor_msgs geometry_msgs nav_msgs tf2 tf2_ros)
 
 
 add_executable(pre_approach_v2_node src/pre_approach_v2.cpp)
 ament_target_dependencies(pre_approach_v2_node
-rclcpp sensor_msgs geometry_msgs nav_msgs custom_interfaces)
+rclcpp sensor_msgs geometry_msgs nav_msgs custom_interfaces tf2 tf2_ros std_msgs)
 
 add_executable(approach_service_server_node src/approach_service_server.cpp)
 ament_target_dependencies(approach_service_server_node
